[tool.poetry]
name = "fastapi-user-management"
version = "0.1.0"
description = ""
authors = ["pejmans21 <pezhmansamadi21@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
pydantic = { version = "^2.0", extras = ["dotenv"] }
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
omegaconf = "^2.3.0"
importlib-metadata = "^7.1.0"
pydantic-settings = "^2.6.1"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-order = "^1.2.1"
coverage-badge = "^1.1.0"
mimesis = "^16.0.0"
httpx = "^0.27.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.5"
black = "^24.3.0"
pre-commit = "^3.7.0"
sqlalchemy-stubs = "^0.4"
types-python-jose = "^3.3.4.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --------------------- Linting Tools ---------------------

[tool.mypy]
exclude = []
plugins = [
  "sqlmypy",
  "pydantic.mypy"
]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "fastapi_user_management"
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
check = false
preview = true

[tool.ruff]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP", # pyupgrade
  "D",  # pydocstyle
  "W",  # pep8 warnings
  "T",  # flake8-todos
]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
]
[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*.py" = [
  "D100",
]
"fastapi_user_management/alembic/versions/*.py" = [
  "D",
]
"fastapi_user_management/alembic/env.py" = [
  "D",
  "I",
  "W",
  "E",
  "UP",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-third-party = [
  "fastapi",
  "pydantic",
  "sqlalchemy",
  "alembic"
]
